[gd_scene load_steps=8 format=3 uid="uid://bwmlfrx8gkuic"]

[ext_resource type="Script" uid="uid://dh5p4q0e85c4f" path="res://Scenes/shop.gd" id="1_s8dlv"]
[ext_resource type="Theme" uid="uid://dtwkn1uwlcod5" path="res://Assets/New_inner_sidebar_themeing.tres" id="1_ymrm4"]
[ext_resource type="FontFile" uid="uid://wjtial1f50wv" path="res://Assets/Cinzel-Bold.ttf" id="3_s8dlv"]
[ext_resource type="StyleBox" uid="uid://25f06d3wx5kb" path="res://Assets/Button_style_box.tres" id="4_tyrku"]
[ext_resource type="StyleBox" uid="uid://cn5k1t1mloygf" path="res://Assets/Button_style_pressed.tres" id="5_5xp22"]
[ext_resource type="StyleBox" uid="uid://bpxwbwsgjuesr" path="res://Assets/Button_style_hoverd.tres" id="6_ow1eo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5xp22"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Shop" type="Panel"]
theme = ExtResource("1_ymrm4")
script = ExtResource("1_s8dlv")

[node name="shopping" type="Panel" parent="."]
layout_mode = 0
offset_right = 710.0
offset_bottom = 500.0
theme = ExtResource("1_ymrm4")

[node name="Bar" type="Panel" parent="shopping"]
layout_mode = 0
offset_left = 35.0
offset_top = 145.0
offset_right = 684.0
offset_bottom = 445.0

[node name="ClickCatcher" type="Panel" parent="shopping/Bar"]
visible = false
layout_mode = 0
offset_left = -33.0
offset_top = -146.0
offset_right = 675.0
offset_bottom = 359.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5xp22")

[node name="Label" type="Label" parent="shopping/Bar"]
layout_mode = 0
offset_left = 3.0
offset_right = 116.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("3_s8dlv")
theme_override_font_sizes/font_size = 20
text = "Buy Cards"

[node name="card1" type="Panel" parent="shopping/Bar"]
layout_mode = 0
offset_left = 25.0
offset_top = 80.0
offset_right = 125.0
offset_bottom = 210.0

[node name="card2" type="Panel" parent="shopping/Bar"]
layout_mode = 0
offset_left = 270.0
offset_top = 80.0
offset_right = 370.0
offset_bottom = 210.0

[node name="card3" type="Panel" parent="shopping/Bar"]
layout_mode = 0
offset_left = 520.0
offset_top = 80.0
offset_right = 620.0
offset_bottom = 210.0

[node name="Next_round" type="Button" parent="shopping"]
layout_mode = 0
offset_left = 46.0
offset_top = 20.0
offset_right = 249.0
offset_bottom = 123.0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_s8dlv")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = ExtResource("4_tyrku")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_5xp22")
theme_override_styles/hover_pressed = ExtResource("5_5xp22")
theme_override_styles/hover_mirrored = ExtResource("6_ow1eo")
theme_override_styles/hover = ExtResource("6_ow1eo")
theme_override_styles/pressed_mirrored = ExtResource("5_5xp22")
theme_override_styles/pressed = ExtResource("5_5xp22")
theme_override_styles/normal_mirrored = ExtResource("4_tyrku")
theme_override_styles/normal = ExtResource("4_tyrku")
text = "Next Round"

[node name="Label" type="Label" parent="shopping"]
layout_mode = 0
offset_left = 382.0
offset_top = 28.0
offset_right = 602.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_fonts/font = ExtResource("3_s8dlv")
theme_override_font_sizes/font_size = 75
text = "SHOP"

[connection signal="gui_input" from="shopping/Bar/ClickCatcher" to="." method="_on_click_catcher_gui_input"]
[connection signal="pressed" from="shopping/Next_round" to="." method="_on_next_round_pressed"]
